LCEL tutorials started

--- a/LCEL Tutorial.ipynb
+++ b/LCEL Tutorial.ipynb
@@ -24,7 +24,10 @@
    "source": [
     "llm = ChatOllama(model=\"llama3.1:latest\",\n",
     "                 temperature=0.7,\n",
-    "                 format=\"\")"
+    "                 format=\"\")\n",
+    "\n",
+    "# llm = ChatGroq(model=\"llama3-70b-8192\", # llama3-groq-70b-8192-tool-use-preview\n",
+    "#                temperature=0.7)"
    ]
   },
   {
