LCEL tutorial finished

--- a/LCEL Tutorial.ipynb
+++ b/LCEL Tutorial.ipynb
@@ -32,13 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llm = ChatOllama(model=\"llama3.1:latest\",\n",
-    "#                  temperature=0.3,\n",
-    "#                  format=\"\")\n",
-    "\n",
-    "llm = ChatOllama(model=\"llama3-groq-tool-use:8b\",\n",
+    "llm = ChatOllama(model=\"llama3.1:latest\",\n",
     "                 temperature=0.3,\n",
-    "                 format=\"json\")\n",
+    "                 format=\"\")\n",
     "\n",
     "# llm = ChatGroq(model=\"llama3-groq-70b-8192-tool-use-preview\", # \"llama3-70b-8192\"\n",
     "#                temperature=0.3,\n",
@@ -936,6 +932,17 @@
    "metadata": {},
    "source": [
     "# Tool/Function Calling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOllama(model=\"llama3-groq-tool-use:8b\",\n",
+    "                 temperature=0.3,\n",
+    "                 format=\"json\")"
    ]
   },
   {
